<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_color" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:paddingBottom="@dimen/key_line_second"
        android:src="@drawable/splash_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dialog_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <com.kakao.widget.LoginButton
            android:id="@+id/login_kakao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/signin_button"
            android:text="@string/kakao_login"
            android:textColor="@color/brand_text_color"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/key_line_first" />

        <Button
            android:id="@+id/login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/signin_button"
            android:text="@string/facebook_login"
            android:textColor="@color/brand_text_color"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>