<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.pinthecloud.item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bepro_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/be_pro_content_margin"
        android:contentDescription="@string/be_pro"
        android:src="@drawable/bepro_badge_img" />

    <com.pinthecloud.item.view.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/be_pro_content_margin"
        android:text="@string/be_pro"
        android:textColor="@color/be_pro_text"
        app:textType="subhead" />

    <com.pinthecloud.item.view.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/be_pro_code_margin"
        android:text="@string/support_email"
        android:textColor="@color/brand_text_color_light"
        app:textType="caption" />

    <EditText
        android:id="@+id/be_pro_frag_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/be_pro_code_margin"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/code"
        android:textColor="@color/be_pro_text"
        android:textColorHint="@color/be_pro_code_hint"
        android:textSize="@dimen/font_large" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/be_pro_frag_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/be_pro_submit_button"
        android:enabled="false"
        android:text="@string/submit"
        android:textColor="@color/brand_text_color"
        android:textSize="@dimen/font_medium" />

</LinearLayout>