<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.pinthecloud.item"
    android:id="@+id/toolbar_item_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/row_height"
    android:background="@android:color/white"
    android:paddingEnd="@dimen/key_line_first"
    android:paddingLeft="@dimen/key_line_first"
    android:paddingRight="@dimen/key_line_first"
    android:paddingStart="@dimen/key_line_first" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/toolbar_item_like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/like"
            android:src="@drawable/home_item_like_button" />

        <LinearLayout
            android:id="@+id/toolbar_item_like_number_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginStart="@dimen/layout_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <com.pinthecloud.item.view.ItTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textColor="@color/gray_super_dark"
                app:textType="caption" />

            <com.pinthecloud.item.view.ItTextView
                android:id="@+id/toolbar_item_like_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_super_dark"
                app:textType="caption" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/toolbar_item_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/more"
            android:src="@drawable/appbar_more_ic" />

        <Button
            android:id="@+id/toolbar_item_product_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_item_tag_button"
            android:drawableLeft="@drawable/home_item_tag"
            android:drawablePadding="@dimen/content_margin"
            android:drawableStart="@drawable/home_item_tag"
            android:gravity="center"
            android:minHeight="@dimen/none"
            android:minWidth="@dimen/none"
            android:paddingEnd="@dimen/content_big_margin"
            android:paddingLeft="@dimen/content_margin"
            android:paddingRight="@dimen/content_big_margin"
            android:paddingStart="@dimen/content_margin"
            android:text="@string/get_product"
            android:textColor="@color/home_item_tag_text"
            android:textSize="@dimen/font_micro" />
    </LinearLayout>

</RelativeLayout>